# Scintillator_Sipm

./: .gitignore  CMakeLists.txt  README.md  main.cc
include/: DetectorConstruction.hh  OpticalSiPM_SD.hh  RunAction.hh  ScintSD.hh
macros/: vis1.mac
src/: ActionInitialization.cc  DetectorConstruction.cc  OpticalSiPM_SD.cc  RunAction.cc  ScintSD.cc
